squishy btn add and clean button fix

--- a/css/styles.full.css
+++ b/css/styles.full.css
@@ -1,20 +1,6 @@
 @charset "UTF-8";
-html, body {
-  height: 100vh; }
-
-body {
-  background: #eee;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
-
 .buttons {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   width: 500px;
-  height: 260px;
-  margin-top: -130px;
-  margin-left: -250px;
   text-align: center; }
 
 .set:not(:last-child) {
@@ -112,10 +98,10 @@ body {
 .set.black .btn.pri.ico:before {
   content: ""; }
 
-section {
+.hand-drawn {
   display: flex;
   flex-direction: row; }
-  section button {
+  .hand-drawn button {
     font-family: 'Patrick Hand SC', cursive;
     align-self: center;
     background: transparent;
@@ -131,15 +117,15 @@ section {
     border-top-right-radius: 15px 225px;
     border-bottom-right-radius: 225px 15px;
     border-bottom-left-radius: 15px 255px; }
-    section button:hover {
+    .hand-drawn button:hover {
       box-shadow: 2px 8px 4px -6px rgba(0, 0, 0, 0.3); }
-    section button.lined.thick {
+    .hand-drawn button.lined.thick {
       border: solid 7px #41403E; }
-    section button.lined.thin {
+    .hand-drawn button.lined.thin {
       border: solid 2px #41403E; }
-    section button.dotted.thin {
+    .hand-drawn button.dotted.thin {
       border: dotted 2px #41403E; }
-    section button.dashed.thin {
+    .hand-drawn button.dashed.thin {
       border: dashed 2px #41403E; }
 
 .btn-glass {
@@ -323,20 +309,6 @@ nav.btn-bar {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; }
 
-:root {
-  font-family: 'Open Sans', sans;
-  font-size: 11pt;
-  line-height: 1.6;
-  min-height: 100vh;
-  background-attachment: fixed, scroll;
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/49914/grit-fs8.png), -webkit-radial-gradient(ellipse farthest-corner, #555, #999);
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/49914/grit-fs8.png), radial-gradient(ellipse farthest-corner, #555, #999); }
-
-body {
-  width: 75vw;
-  margin: 4em auto;
-  line-height: inherit; }
-
 article {
   padding: 0;
   border: 2px solid transparent;
@@ -380,11 +352,62 @@ h1 {
   font-size: 5vw;
   color: rgba(255, 255, 255, 0.3); }
 
-html *,
-html *:before,
-html *:after {
-  -webkit-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out; }
+button.squishy-btn {
+  font-size: 2em;
+  color: white;
+  display: block;
+  margin: 2em auto;
+  height: 100px;
+  background: cornflowerblue;
+  border: none;
+  position: relative;
+  width: 240px;
+  transition: all 0.2s ease-out;
+  -webkit-transition: all 0.2s ease-out;
+  box-shadow: 0 0 .25em #333;
+  cursor: pointer;
+  outline: none; }
+
+button.squishy-btn:active {
+  -webkit-transform: scale(1.2, 0.8); }
+
+button.squishy-btn:active::before {
+  border-top-width: 10px;
+  border-bottom-width: 10px;
+  border-radius: .2em;
+  top: -10px;
+  border-left-color: cornflowerblue; }
+
+button.squishy-btn:active::after {
+  border-top-width: 10px;
+  border-bottom-width: 10px;
+  border-radius: .2em;
+  top: -10px;
+  border-right-color: cornflowerblue; }
+
+html {
+  height: 100vh; }
+  html *,
+  html *:before,
+  html *:after {
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out; }
+
+body {
+  width: 75vw;
+  height: 100vh;
+  margin: 4em auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+:root {
+  font-family: 'Open Sans', sans;
+  font-size: 11pt;
+  line-height: 1.6;
+  min-height: 100vh;
+  background-attachment: fixed, scroll;
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/49914/grit-fs8.png), -webkit-radial-gradient(ellipse farthest-corner, #555, #999);
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/49914/grit-fs8.png), radial-gradient(ellipse farthest-corner, #555, #999); }
 
 a {
   text-decoration: none; }
