--- a/sass/_hand-drawn.scss
+++ b/sass/_hand-drawn.scss
@@ -1,6 +1,7 @@
 ////// hand drawn border buttons
 // @import url(https://fonts.googleapis.com/css?family=Patrick+Hand+SC);
-section {
+//
+.hand-drawn {
     display: flex;
     flex-direction: row;
     & button {
@@ -26,7 +27,6 @@ section {
         &.lined.thick {
             border: solid 7px #41403E;
         }
-
 
         &.lined.thin {
             border: solid 2px #41403E;
